--- a/src/app/page/home/modal-detail/modal-detail.component.html
+++ b/src/app/page/home/modal-detail/modal-detail.component.html
@@ -1,8 +1,10 @@
-<div class="modal-header">
-  <h1 class="modal-title fs-5">Thông tin chi tiết</h1>
-</div>
-<div class="modal-body">
-  <div>{{ detailWord?.name }}</div>
-  <div>mean: {{ detailWord?.mean }}</div>
-  <div>type: {{ detailWord?.type }}</div>
+<div class="detailModal">
+  <div class="modal-header">
+    <h1 class="modal-title fs-5">Thông tin chi tiết</h1>
+  </div>
+  <div class="modal-body detailModal__body">
+    <div>{{ detailWord?.name }}</div>
+    <div>mean: {{ detailWord?.mean }}</div>
+    <div>type: {{ detailWord?.type }}</div>
+  </div>
 </div>
